# bed-lift

./: README.md  west.yml
firmware/app/: .gitignore  CMakeLists.txt  log-deferred.conf  log-minimal.conf  log-none.conf  prj.conf
firmware/app/dts/bindings/: color-indicator.yaml
firmware/app/src/: control.c  control.h  errors.h  indicator.c  indicator.h  main.c  melody.c  melody.h  monitor.c  monitor.h  power.c  power.h
firmware/app/src/bed/: bed.c  bed.h  lift.c  lift.h  span.c  span.h
firmware/v0.1/: platformio.ini
firmware/v0.1/src/: main.cpp
firmware/v0.2/: platformio.ini  post_build.py
firmware/v0.2/boards/: brownstudios_bedlift.json
firmware/v0.2/include/: control.h  errors.h  fixed_point.h  indicator.h
firmware/v0.2/src/: control.c  indicator.c  main.c
firmware/v0.2/zephyr/: CMakeLists.txt  prj.conf
hardware/v0.1/: bed-lift.kicad_pro  bed-lift.kicad_sch  design-and-errata.md  linear-actuator-driver.kicad_sch
hardware/v0.2/: bed-lift.kicad_pcb  bed-lift.kicad_sch  design-and-errata.md  lift.kicad_sch  span.kicad_sch
hardware/v0.3/: bed-lift.kicad_dru  bed-lift.kicad_pcb  bed-lift.kicad_pro  bed-lift.kicad_sch  design-and-errata.md  fp-lib-table  lift.kicad_sch  span.kicad_sch  sym-lib-table
hardware/v1/: bed-lift.kicad_pcb  bed-lift.kicad_pro  bed-lift.kicad_sch  design-and-errata.md  fabrication-toolkit-options.json  fp-lib-table  lift.kicad_sch  publish.kicad_jobset  span.kicad_sch
hardware/v1.0/: bed-lift.kicad_dru  bed-lift.kicad_pcb  bed-lift.kicad_pro  bed-lift.kicad_sch  design-and-errata.md  lift.kicad_sch  span.kicad_sch
(+28 files in other folders)
